# boostx-factory

./: CMakeLists.txt  README.md
doc/: factory.doxygen
include/boostx/: factory.hpp  type_info.hpp
src/: factory_test.cpp
